# learning-qml

./: .gitignore  .gitmodules  CMakeLists.txt  learning-qml.sublime-project
Applications/: CMakeLists.txt
Applications/CanvasPaint/: CMakeLists.txt  ColorSquare.qml  main.cpp  main.qml
Applications/CanvasVector/: CMakeLists.txt  ControlPoint.qml  componentCreation.js  main.cpp  main.qml  qml.qrc
Applications/CustomMediaPlayer/: CMakeLists.txt  CameraFrameGrabber.cpp  CameraFrameGrabber.h  CustomPlayer.cpp  CustomPlayer.h  MyMediaPlayer.cpp  MyMediaPlayer.h  main.cpp  main.qml
Applications/FileNavigator/: AppController.cpp  AppController.hpp  CMakeLists.txt  main.cpp  main.qml
Applications/MoviePlayer/: main.qml
Applications/Othello/: Board.qml  BoardCell.qml  CMakeLists.txt  Disc.qml  main.qml  qml.qrc
Applications/QmlVideoProducer/: CMakeLists.txt
Applications/SuperListModel/: AugData.cpp  AugData.h  CMakeLists.txt  SuperListController.cpp  SuperListController.h  main.cpp  main.qml
Applications/SvgEditor/: AppController.cpp  AppController.hpp  CMakeLists.txt  MyPoint.qml  main.cpp  main.qml  qml.qrc
Applications/qReversi/: Board.qml  CMakeLists.txt  main.cpp  main.qml
Applications/qReversiNSFW/: CMakeLists.txt  Cell.cpp  Cell.hpp  GameContext.cpp  GameContext.hpp  GameController.cpp  GameController.hpp  main.cpp  main.qml
Canvas3D/: CMakeLists.txt  glcode.js  main.qml
Canvas3DWithThreeJS/: CMakeLists.txt  glcode.js  main.qml
CppIntegration/: CMakeLists.txt  DeepMessage.cpp  DeepMessage.h  Message.cpp  Message.h  MessageBoard.cpp  MessageBoard.h  ReMessage.cpp  ReMessage.hpp  Signaler.cpp  main.qml  qml.qrc
FirstSteps/: CMakeLists.txt  MyButton.qml
Libraries/: CMakeLists.txt
Libraries/OthelloGame/: CMakeLists.txt
Libraries/OthelloGame/include/OthelloGame/: Board.hpp  OthelloGame.hpp  Stone.hpp
Libraries/OthelloGame/src/: Board.cpp  OthelloGame.cpp
Libraries/Reversi/: CMakeLists.txt
Libraries/Reversi/include/Reversi/: Reversi.hpp  ReversiAI.hpp  ReversiSimpleAI.hpp  ReversiSimpleConstraintedAI.hpp  Tile.hpp
Libraries/Reversi/src/: RandomUtil.hpp  Reversi.cpp  ReversiAI.cpp  ReversiSimpleAI.cpp  ReversiSimpleConstraintedAI.cpp
Libraries/ReversiController/: CMakeLists.txt
Libraries/ReversiController/include/ReversiController/: CellData.hpp  ReversiController.hpp
Libraries/ReversiController/src/: CellData.cpp  ReversiController.cpp
MapViewer/: CMakeLists.txt  main.cpp  main.qml
MoviePlayer/: CMakeLists.txt  main.qml
Othello/: main.qml
Playground/: CMakeLists.txt
Playground/Canvas3D/: CMakeLists.txt
Playground/CppIntegration/: CMakeLists.txt  Message.qml  MessageBoard.cpp  MessageBoard.qml  Signaler.cpp  Signaler.hpp  main.cpp
Playground/FirstSteps/: CMakeLists.txt  main.qml
Playground/MapViewer/: CMakeLists.txt  qml.qrc
Playground/QWidgetMultiFileChooser/: FileItem.h  MainWindow.h
Playground/QuickControls/: main.qml
Playground/QuickMultiFileChooser/: CMakeLists.txt  main.cpp  main.qml
Playground/Semaphore/: CMakeLists.txt  main.qml
QWidgetMultiFileChooser/: CMakeLists.txt  FileItem.cpp  FileItem.ui  MainWindow.cpp  MainWindow.ui  README.md  main.cpp
QuickControls/: CMakeLists.txt  main.cpp
QuickWithUiFiles/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/OthelloGameTests/: BoardTest.cpp  CMakeLists.txt  OthelloGameTest.cpp
Tests/ReversiTests/: CMakeLists.txt  ReversiTest.cpp
