# =============================================================================
#   Copyright (c) 2016 nextcode:ch
# 
#   Author: Michele Dell'Ambrogio (m@nextcode.ch)
# =============================================================================

cmake_minimum_required(VERSION 3.2)

project(LearningQML)

#add_subdirectory(FirstSteps)
#add_subdirectory(MapViewer)
#add_subdirectory(Canvas3D)
#add_subdirectory(Canvas3DWithThreeJS)
#add_subdirectory(QuickControls)
#add_subdirectory(QuickWithUiFiles)
#add_subdirectory(CppIntegration)
add_subdirectory(MoviePlayer)
#add_subdirectory(QWidgetMultiFileChooser)
#add_subdirectory(QuickMultiFileChooser)
