# =============================================================================
#   Copyright (c) 2016 nextcode:ch
# 
#   Author: Michele Dell'Ambrogio (m@nextcode.ch)
# =============================================================================

cmake_minimum_required(VERSION 3.2)

add_subdirectory(Othello)
add_subdirectory(MoviePlayer)
