# =============================================================================
#   Copyright (c) 2016 nextcode:ch
# 
#   Author: Michele Dell'Ambrogio (m@nextcode.ch)
# =============================================================================

cmake_minimum_required(VERSION 3.2)

add_subdirectory(MoviePlayer)
add_subdirectory(qReversi)
add_subdirectory(qReversiNSFW)
