# =============================================================================
#   Copyright (c) 2016 nextcode:ch
#
#   Author: Michele Dell'Ambrogio (m@nextcode.ch)
# =============================================================================

cmake_minimum_required(VERSION 3.0)

add_subdirectory(MoviePlayer)
add_subdirectory(FileNavigator)
add_subdirectory(SvgEditor)
add_subdirectory(qReversi)
add_subdirectory(qReversiNSFW)
add_subdirectory(CanvasVector)
add_subdirectory(CanvasPaint)
