cmake_minimum_required(VERSION 3.0)

#add_subdirectory(FirstSteps)
#add_subdirectory(MapViewer)
#add_subdirectory(Canvas3D)
#add_subdirectory(Canvas3DWithThreeJS)
#add_subdirectory(QuickControls)
#add_subdirectory(QuickWithUiFiles)
#add_subdirectory(CppIntegration)
#add_subdirectory(MoviePlayer)
#add_subdirectory(QWidgetMultiFileChooser)
#add_subdirectory(QuickMultiFileChooser)
add_subdirectory(Semaphore)
